--- a/glide.yaml
+++ b/glide.yaml
@@ -24,6 +24,7 @@ import:
 - package: github.com/spf13/cobra
 - package: github.com/fatih/color
   version: ^1.4.1
+- package: github.com/gosuri/uilive
 testImport:
 - package: github.com/stretchr/testify
   version: ^1.1.4
