--- a/glide.yaml
+++ b/glide.yaml
@@ -25,6 +25,9 @@ import:
 - package: github.com/fatih/color
   version: ^1.4.1
 - package: github.com/gosuri/uilive
+- package: github.com/golang/mock
+  subpackages:
+  - gomock
 testImport:
 - package: github.com/stretchr/testify
   version: ^1.1.4
